# NoteSync

./: CMakeLists.txt  Plan.txt  appicon.qrc  main.cpp
Core/Note/: Note.cpp  Note.h
Core/NoteManager/: NoteManager.cpp  NoteManager.h
Persistance/Database/: Database.cpp  Database.h
Persistance/DatabaseWorker/: DatabaseWorker.cpp  DatabaseWorker.cpp.autosave  DatabaseWorker.h
UI/CardEdit/: CardEdit.cpp  CardEdit.h
UI/CategoriesList/: CategoriesList.cpp  CategoriesList.h
UI/Editor/: Editor.cpp  Editor.h
UI/Header/: Header.cpp  Header.h
UI/MainWindow/: MainWindow.cpp  MainWindow.h
UI/NoteInterface/: NoteInterface.cpp  NoteInterface.h
UI/NoteUI/: NoteUI.cpp  NoteUI.h
UI/NotesList/: NotesList.cpp  NotesList.h
